fixed dark mode button display issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -189,7 +189,6 @@ footer {
 }
 
 .theme-btns {
-    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -200,8 +199,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
-    width: 50px;
+    height: 48px;
+    width: 49px;
     border-radius: 10px;
 }
 
